--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     
  
-   <script src="./js/M2/masyvy.js" type="module"></script>
+   <!-- <script src="./js/M2/masyvy.js" type="module"></script> -->
    <!-- <script src="./js/M2/find_login.js" type="module"></script> -->
    <!-- <script src="./js/M2/min_number.js" type="module"></script> -->
-   <!-- <script src="./js/script-4.js" type="module"></script> -->
+   <script src="./js/M2/metody.js" type="module"></script>
    <!-- <script src="./js/script-5.js" type="module"></script> -->
   <!-- <script src="./js/script-6.js" type="module"></script> -->
 </body>
