--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
    <!-- <script src="./js/M2/masyvy.js" type="module"></script> -->
    <!-- <script src="./js/M2/find_login.js" type="module"></script> -->
    <!-- <script src="./js/M2/min_number.js" type="module"></script> -->
-   <script src="./js/M2/metody.js" type="module"></script>
+   <!-- <script src="./js/M2/metody.js" type="module"></script> -->
+   <script src="./js/M2/funkcii.js" type="module"></script>
    <!-- <script src="./js/script-5.js" type="module"></script> -->
   <!-- <script src="./js/script-6.js" type="module"></script> -->
 </body>
